# motogp-results-manager

./: .gitignore  LICENSE  README.md  bun.lockb  dockerfile  index.html  package.json  pyproject.toml  vite.config.ts
app/: main.py  utils.py
back/: dockerfile  main.py  utils.py
motogp_library/: _types.xsd  competitor_merge_mappings.xsd  competitor_profile.xsd  constructure-world-championship.csv  deleted_stages.xsd  grand-prix-events-held.csv  grand-prix-race-winners.csv  motogp_competitor.xsd  motogp_info.xsd  motogp_probabilities.xsd  motogp_stage.xsd  motogp_team.xsd  probabilities.xsd  riders-finishing-positions.csv  riders-info.csv  same-nation-podium-lockouts.csv  seasons.xsd  stages.xsd  summary.xsd
src/: App.tsx  main.tsx
src/components/: footer.tsx  navbar.tsx  rotating-banner.tsx
src/pages/: About.tsx  CircuitDetail.tsx  Circuits.tsx  ConstructorDetail.tsx  Constructors.tsx  Footer.css  Footer.tsx  Home.css  Home.tsx  Navbar.tsx  NotFound.tsx  PilotDetail.tsx  Pilots.tsx
