[tool.poetry]
name = "motogp-results-manager"
version = "0.1.0"
description = ""
authors = ["cacara82 <cacara890@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
kagglehub = "^0.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
